Address some comments.

--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -360,3 +360,25 @@
   ISSN={1521-9615}, 
   month={March}
 }
+
+@article{duretz2016free,
+  title={A free surface capturing discretization for the staggered grid finite difference scheme},
+  author={Duretz, Thibault and May, DA and Yamato, Philippe},
+  journal={Geophysical Journal International},
+  volume={204},
+  number={3},
+  pages={1518--1530},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+@article{matsumoto1983numerical,
+  title={Numerical simulation of the initiation of subduction at the fracture zone.},
+  author={Matsumoto, Takeshi and Tomoda, Yoshibumi},
+  journal={Journal of Physics of the Earth},
+  volume={31},
+  number={3},
+  pages={183--194},
+  year={1983},
+  publisher={The Seismological Society of Japan, The Volcanological Society of Japan, The Geodetic Society of Japan}
+}
