Add note about spatial discretizations.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -478,6 +478,9 @@ The modes with the smallest relaxation times are usually those with the largest 
 and so it will be those which become unstable first, a phenomenon which has been called 
 a ``sloshing'', or ``drunken sailor'' instability \citep{kaus2010stabilization}.
 
+This stability analysis does not rely on the specific choice of spatial discretization,
+and so should hold equally well for linear finite elements and higher-order elements.
+
 \section{Analysis of quasi-implicit stabilization}
 \label{sec:kmm}
 
