Add Taras to thank yous.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1195,7 +1195,7 @@ and by the Computational Infrastructure in Geodynamics (CIG), through National S
 TH is partially supported by NSF grant DMS-1522191.
 Figures were created using the Python packages NumPy and Matplotlib.
 Thanks to Wolfgang Bangerth, Brent Delbridge, and Cedric Thieulot for useful discussions.
-Thanks to Fabio Crameri and Dave May for constructive reviews.
+Thanks to Fabio Crameri, Taras Gerya, and Dave May for constructive reviews.
 
 %% The Appendices part is started with the command \appendix;
 %% appendix sections are then done as normal sections
