add sentence to abstract

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -140,7 +140,7 @@ an explicit scheme based on nonstandard finite differences.  It relies on a sing
 stabilization parameter which may be identified with the smallest relaxation timescale of the
 free surface.
 
-Finally, we discuss the implementation of a free surface in the open source, community based
+Finally, we present numerical results to show the effectiveness of the new approach and discuss the free surface implementation in the open source, community based
 mantle convection software \texttt{ASPECT}.
 \end{abstract}
 
