--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -980,9 +980,47 @@ Similar results were found by \citet{fullsack1995arbitrary}.
 
 Figure~\ref{fig:pseudocode} shows pseudocode descriptions of the free surface implementation described in this section.
 
+% \begin{figure}
+% \centering
+% \begin{subfigure}[b]{0.43\textwidth}
+% \begin{mdframed}[backgroundcolor=gray!20]
+% {\small
+% \begin{enumerate}
+%   \item Solve the Stokes system, including the boundary term given in Equation~\eqref{eq:kmm}, 
+%     which is a function of timestep $t^n$ and $\theta$.
+%   \item Solve for the surface mesh velocity using Equation~\eqref{eq:mesh_velocity_system}.
+%   \item Solve for the internal mesh velocity using Equations~\eqref{eq:laplacian_smoothing}~-~\eqref{eq:laplacian_bcs}.
+%   \item Advect the mesh forward in time using displacements determined by the forward Euler scheme: $\mathbf{x}(t^{n+1}) = \mathbf{x}(t^n) + \mathbf{u}_\mathrm{mesh}\Delta t$.
+% \end{enumerate} 
+% }
+% \end{mdframed}
+% \caption{Quasi-implicit}
+% \end{subfigure}
+% \begin{subfigure}[b]{0.43\textwidth}
+% \begin{mdframed}[backgroundcolor=gray!20]
+% {\small
+% \begin{enumerate}
+%   \item Estimate $\tau_\mathrm{min}$ using one of the means described in Section~\ref{sec:tau_choice}.
+%   \item Solve the Stokes system normally.
+%   \item Solve for the surface mesh velocity using Equation~\eqref{eq:mesh_velocity_system}.
+%   \item Solve for the internal mesh velocity using Equations~\eqref{eq:laplacian_smoothing}~-~\eqref{eq:laplacian_bcs}.
+%   \item Advect the mesh forward in time using displacements determined by the nonstandard finite difference scheme (Equation~\eqref{eq:nsfd}).
+% \end{enumerate}
+% \vspace{1.4mm}
+% }
+% \end{mdframed}
+% \caption{Nonstandard finite differences}
+% \end{subfigure}
+% \caption{Pseudocode descriptions of the free surface implementations.}
+% \label{fig:pseudocode}
+% \end{figure}
+
 \begin{figure}
 \centering
-\begin{subfigure}[b]{0.43\textwidth}
+
+%\caption
+{Quasi-implicit scheme:}
+
 \begin{mdframed}[backgroundcolor=gray!20]
 {\small
 \begin{enumerate}
@@ -994,9 +1032,10 @@ Figure~\ref{fig:pseudocode} shows pseudocode descriptions of the free surface im
 \end{enumerate} 
 }
 \end{mdframed}
-\caption{Quasi-implicit}
-\end{subfigure}
-\begin{subfigure}[b]{0.43\textwidth}
+
+%\caption
+{Nonstandard finite differences:}
+
 \begin{mdframed}[backgroundcolor=gray!20]
 {\small
 \begin{enumerate}
@@ -1009,9 +1048,9 @@ Figure~\ref{fig:pseudocode} shows pseudocode descriptions of the free surface im
 \vspace{1.4mm}
 }
 \end{mdframed}
-\caption{Nonstandard finite differences}
-\end{subfigure}
-\caption{Pseudocode descriptions of the our free surface implementations.}
+
+
+\caption{Pseudocode for a single timestep of the free surface algorithms.}
 \label{fig:pseudocode}
 \end{figure}
 
