--- a/new_response_to_referee.tex
+++ b/new_response_to_referee.tex
@@ -65,7 +65,8 @@ However, we are not aware of discussion of this in the literature or open-source
    Your method remains formally 1st order. Are higher-order discretisations of the mesh deformation helpful in this case or do they suffer the same / worse problems ?
 \end{quotation}
 
-Our analysis of the instability is purely in the time discretization, 
+It is true that our method is a first-order method in time.
+Our analysis of the instability is purely for the timestepping,
 so higher-order spatial discretizations should suffer from the identical instability.
 We have added a note to this effect in the manuscript.
 
